# oscar-trash-cli

./: Cargo.toml  README.md
src/: actions.rs  common.rs  constants.rs  lib.rs  main.rs  mount.rs  string_encode.rs  trash.rs  trash_info.rs  tree.rs
src/actions/: trash_empty.rs  trash_info.rs  trash_list.rs  trash_put.rs  trash_remove.rs  trash_restore.rs  trash_rs.rs
tests/: common_tests.rs  trash_empty_tests.rs  trash_list_tests.rs  trash_put_tests.rs  trash_remove_tests.rs  trash_restore_tests.rs
tests/common/: mod.rs
