[package]
name = "oscar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["alloc"] }
clap = { version = "4.5.23", features = ["derive"] }
configparser = "3.1.0"
inquire = { version = "0.7.5", features = ["date"] }
tabled = "0.17.0"

[dev-dependencies]
serial_test = "3.2.0"
